--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
-  "name": "table",
+  "name": "@talkohavy/table",
   "private": true,
   "version": "0.0.0",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "clean": "rm -rf node_modules",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "typecheck": "tsc -p tsconfig.build.json",
+    "format-check": "prettier . --check --config .prettierrc.mjs --ignore-path .prettierignore",
+    "format": "prettier . --write --log-level silent --config .prettierrc.json --ignore-path .prettierignore",
+    "test": "node --test",
+    "build": "node build.config.js",
     "preview": "vite preview"
   },
-  "dependencies": {
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "restricted"
+  },
+  "sideEffects": ["**/*.css", "**/*.scss"],
+  "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -22,10 +34,15 @@
     "eslint-plugin-ezlint": "^1.6.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "glob": "^11.0.0",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass-embedded": "^1.78.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-lib-inject-css": "^2.1.1"
   }
 }
