fixated typescript version

--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "registry": "https://registry.npmjs.org/",
     "access": "restricted"
   },
-  "sideEffects": [
-    "**/*.css",
-    "**/*.scss"
-  ],
+  "sideEffects": ["**/*.css", "**/*.scss"],
   "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -43,7 +40,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass-embedded": "^1.78.0",
-    "typescript": "^5.5.3",
+    "typescript": "~5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vite-plugin-lib-inject-css": "^2.1.1"
