separated vite config into 2 different configs - 1 is for building the package, and 2 is for building the webapp

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier . --write --log-level silent --config .prettierrc.json --ignore-path .prettierignore",
     "test": "node --test",
     "build": "node build.config.js",
+    "build-webapp": "vite build --config vite.config.webapp.ts",
     "preview": "vite preview"
   },
   "publishConfig": {
