--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "keywords": ["table", "@tanstack/table"],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.config.package.ts",
     "clean": "rm -rf node_modules",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "typecheck": "tsc -p tsconfig.build.json",
