--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-ezlint": "^1.6.2",
@@ -49,10 +50,12 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "glob": "^11.0.0",
     "globals": "^15.9.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass-embedded": "^1.78.0",
+    "tailwindcss": "^3.4.12",
     "typescript": "~5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
