--- a/.vite/manifest.json
+++ b/.vite/manifest.json
@@ -1,11 +1,11 @@
 {
   "index.html": {
-    "file": "main/index-BHvLrYSY.js",
+    "file": "main/index-BW8qGeyu.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
     "css": [
-      "static/css/index.UlT_wDap1_zj.css"
+      "static/css/index.DJrWpURLvqw6.css"
     ]
   }
 }
