--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "type": "module",
   "keywords": ["table", "@tanstack/table"],
   "scripts": {
-    "dev": "vite --config vite.config.package.ts",
+    "dev": "vite --config vite.config.webapp.ts",
     "clean": "rm -rf node_modules",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc -p tsconfig.build.json --noEmit --emitDeclarationOnly false",
+    "typecheck": "tsc -p tsconfig.package.json --noEmit --emitDeclarationOnly false",
     "format-check": "prettier . --check --config .prettierrc.mjs --ignore-path .prettierignore",
     "format": "prettier . --write --log-level silent --config .prettierrc.json --ignore-path .prettierignore",
     "test": "node --test",
@@ -55,6 +55,7 @@
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "sass-embedded": "^1.78.0",
     "tailwindcss": "^3.4.12",
     "typescript": "~5.3",
